--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/AlexandreSama/Patou#readme",
   "dependencies": {
-    "discord-akairo": "github:Tricked-dev/discord-akairo",
+    "common-tags": "^1.8.2",
+    "discord-akairo": "github:NotEnoughUpdates/discord-akairo",
     "discord.js": "^13.6.0",
     "mysql2": "^2.3.3"
   }
